GLSurfaceGLX: try to fix Linux AMD R7 240 bot

Bug: 795376
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Icfbe08fe64625d0aa2a6fc559a1d4f2ed0758341
Reviewed-on: https://chromium-review.googlesource.com/832912
Commit-Queue: Peng Huang <penghuang@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524822}
Former-commit-id: 34841e0c1743edb739badae281b6d047f4c9412c